tests/parser/fail/v21_fail_global_let_removed.ep
# COMPILE_FAIL: Unexpected token
let value = 1

fun main(): void {
}
